--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,46 @@
 .App-link {
   color: #09d3ac;
 }
+
+/* Navigation menu */
+nav {
+  font-size: 0.8em;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav li {
+ display: inline; 
+}
+
+nav li + li::before {
+    content: " | ";
+}
+
+/* unvisited link */
+nav a:link {
+  color: black;
+  text-decoration: none;
+}
+
+/* visited link */
+nav a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+/* mouse over link */
+nav a:hover {
+  color: red;
+  text-decoration: underline;
+}
+
+/* selected link */
+nav a:active {
+  color: green;
+  text-decoration: underline;
+}
+
+/* fin */
